--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,8 @@
-peacock_cropped/
-bottom_field_cropped/
-top_field_cropped/
-greyscale_images/
-old/
-20160823_Gs_NDVI_1000ft_2-148_1_modified.tif_2758_6810_3058_7110.txt_sub_img/
-normans_cropped/
-normans_cropped_old/
-bottom_field_segment/
-Run1/
-data/
-first_whole_field_run/
-data_newbest/
-hand_made/
-field/
-data_best/
-negative_partials/
-negatives - Copy/
-data_current/
-epochs/
-negatives/
-CONVERTED_negatives/
-CONVERTED_positives/
-positives/
-imgs/
-20160823_Gs_NDVI_1000ft_2-148_1/
+".idea/" 
 .idea/
-20160816_Gs_Wk33_NDVI_1000ft_Shippea_Hill_211-362/
 *.pyc
-*.png
-*.tif
-*.jpg
+bottom_field.png
+bottom_field_cropped.png
+bottom_field_cropped_fielddata.csv
+normans_cropped.png
+peacock_cropped.png
