Updated gitignore to make it more comprehensive

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,18 @@ bottom_field_cropped.png
 bottom_field_cropped_fielddata.csv
 normans_cropped.png
 peacock_cropped.png
+.DS_Store
+.eggs/
+data/.DS_Store
+data/bottom_field/*
+data/bottom_field_cropped/*
+data/large_grey_conv/.DS_Store
+data/normans_cropped/*
+data/peacock_cropped/*
+dist/*
+help.spec
+setup.py
+sample_region*.csv
+test.png
+whole_field.png
+
